<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="BarcodeCameraActivity"
    android:background="@drawable/background"
    >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:contentPadding="@dimen/card_content_padding"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true"
        android:background="@android:color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/barcode_header"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:id="@+id/status_message"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginTop="55sp"
            android:background="@android:color/darker_gray"/>
        <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="200sp"
            android:layout_marginTop="55sp"
    android:layout_below="@+id/status_message">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/barcode_value"
        android:hint="@string/text_value_hint"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="30sp"/>
</ScrollView>
</android.support.v7.widget.CardView>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/use_flash">

        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
        android:id="@+id/group"
    ><com.github.skydoves.ElasticButton
        android:id="@+id/read_barcode"
        android:layout_width="120sp"
        android:layout_height="40sp"
        app:button_backgroundColor="#30354b"
        app:button_round="20"
        app:button_scale="0.7"
        app:button_duration="400"
        android:text="@string/read_barcode"
        app:button_labelText="@string/read_barcode"
        app:button_labelColor="#ffffff"
        app:button_labelSize="16"
        app:button_labelStyle="bold"
        android:layout_marginLeft="10sp"/>
        <com.github.skydoves.ElasticButton
            android:id="@+id/show_gallery"
            android:layout_width="150sp"
            android:layout_height="40sp"
            android:layout_marginLeft="05sp"
            app:button_backgroundColor="#30354b"
            app:button_round="20"
            app:button_scale="0.7"
            app:button_duration="400"
            android:text="Choose from Gallery"
            app:button_labelText="Choose from Gallery"
            app:button_labelColor="#ffffff"
            app:button_labelSize="16"
            app:button_labelStyle="bold"/>
        <Button
            android:id="@+id/refresh"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="5sp"
            android:gravity="right|end"
            android:background="@drawable/refresh"/>
</LinearLayout>
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="200sp"
        android:layout_height="120sp"
        android:layout_gravity="center"/>
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:textStyle="bold"
        android:layout_below="@+id/card_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:textStyle="bold"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="false" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="59sp"
        android:id="@+id/floatingActionButton"
        android:src="@drawable/search"/>
</RelativeLayout>
