<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_below="@+id/appbar"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        android:layout_marginTop="50sp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="@dimen/card_content_padding"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginTop="0sp"
            android:textColor="@android:color/holo_red_dark"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ocr_header"
            android:id="@+id/status_message"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true" />
        <ScrollView
        android:id="@+id/recognisedSV"
        android:layout_width="match_parent"
        android:layout_height="200sp"
            android:layout_marginTop="60sp"
        android:background="@android:color/white"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/text_value"
            android:layout_marginBottom="0sp"
            android:hint="@string/text_value_hint"
android:layout_marginLeft="10sp"
            android:textSize="20sp"
            android:layout_marginRight="10sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@+id/status_message"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30sp"
            android:layout_alignRight="@+id/status_message"
            android:layout_alignEnd="@+id/status_message"
            />
    </ScrollView>

</android.support.v7.widget.CardView>
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <com.github.skydoves.ElasticButton
            android:id="@+id/read_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="0sp"
            app:button_backgroundColor="#30354b"
            app:button_round="20"
            app:button_scale="0.7"
            app:button_duration="400"
            android:text="@string/read_text"
            app:button_labelText="@string/read_text"
            app:button_labelColor="#ffffff"
            app:button_labelSize="16"
            app:button_labelStyle="bold"/>
        <com.github.skydoves.ElasticButton
            android:id="@+id/show_gallery"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="05sp"
            app:button_backgroundColor="#30354b"
            app:button_round="20"
            app:button_scale="0.7"
            app:button_duration="400"
            android:text="Choose from Gallery"
            app:button_labelText="Choose from Gallery"
            app:button_labelColor="#ffffff"
            android:layout_marginTop="0sp"
            app:button_labelSize="16"
            app:button_labelStyle="bold"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10sp"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:textStyle="bold"
        android:layout_below="@+id/text_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:textStyle="bold"
        android:id="@+id/use_flash"
        android:layout_gravity="right"
        android:layout_below="@+id/text_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />
</LinearLayout>

</LinearLayout>
    </RelativeLayout>

